@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #ADD1B2
    ArrowColor #2A2A2A
    BorderColor #2A2A2A
}

abstract class Command {
  # parser: Parser
  # ui: Ui
  + execute() : void
}

class DeleteInterviewCommand {
  - internshipList: InternshipList
  - interviewList: InterviewList
  + execute() : void
}

class InternshipList {
  - internships: List<Internship>
  + get(index: int) : Internship
  + getInternships() : List<Internship>
  + getSize() : int
}

class InterviewList {
  - interviews: List<Interview>
  + deleteByInternship(internship: Internship) : void
  + getInterviews() : List<Interview>
  + size() : int
}

class Internship {
  - title: String
  - companyName: String
  - interview: Interview
  + getCompanyName() : String
  + getTitle() : String
  + getInterview() : Interview
  + deleteInterview() : void
}

class Interview {
  - internship: Internship
  - dateTime: LocalDateTime
  + getDate() : LocalDateTime
  + getInternship() : Internship
}

Command <|-- DeleteInterviewCommand
DeleteInterviewCommand --> "1" InternshipList
DeleteInterviewCommand --> "1" InterviewList
InternshipList o--> "many" Internship
InterviewList o--> "many" Interview
Internship --> "0..1" Interview
@enduml